# SiMFS-core

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  clear_tmp.sh  default.json  getopt_pp.cpp  jsonDiff.json  makefile  simulate.sh
src/components/cnf/: CMakeLists.txt  cnf.cpp
src/components/cnf/include/actions/: end_action.hpp  value_emission_action.hpp
src/components/cnf/include/conformation/: component.hpp
src/components/cnf/src/: component.cpp  end_action.cpp  simfs_cnf.cpp  value_emission_action.cpp
src/components/det/: CMakeLists.txt  det.cpp
src/components/det/include/detection/: component.hpp
src/components/det/src/: component.cpp  simfs_det.cpp
src/components/dif/: CMakeLists.txt  dif.cpp
src/components/dif/include/diffusion/: component.hpp
src/components/dif/src/: component.cpp  simfs_dif.cpp
src/components/fcs/: CMakeLists.txt
src/components/fcs/det/src/: component.cpp  simfs_det.cpp
src/components/fcs/exi/: CMakeLists.txt
src/components/fcs/exi/src/: simfs_exi.cpp
src/components/fcs/include/alpha/: component.hpp
src/components/fcs/include/detection/: component.hpp
src/components/fcs/include/efield/: component.hpp
src/components/fcs/include/excitation/: component.hpp
src/components/fcs/include/fcs/: component.hpp
src/components/fcs/include/flux/: component.hpp
src/components/fcs/include/focus/: component.hpp
src/components/fcs/include/gauss/: component.hpp
src/components/fcs/include/precalc/: component.hpp
src/components/fcs/include/precalculate/: component.hpp  shape_serializer.hpp
src/components/fcs/include/pulse/: component.hpp
src/components/fcs/src/: alpha.cpp  fcs.cpp  gauss.cpp  precalc.cpp  pulse.cpp  simfs_fcs.cpp  simfs_pre.cpp
src/components/fcs/src/detection/: component.cpp  simfs_det.cpp
src/components/fcs/src/efield/: component.cpp
src/components/fcs/src/excitation/: component.cpp  simfs_exi.cpp
src/components/fcs/src/focus/: component.cpp
src/components/fcs/src/precalculate/: component.cpp  shape_serializer.cpp  simfs_pre.cpp
src/components/fcs/src/pulse/: simfs_pls.cpp
src/components/mol/: CMakeLists.txt
src/components/mol/include/diffusion/: component.hpp  dif_capi.h
src/components/mol/include/shift/: component.hpp
src/components/mol/src/: cnf.cpp  dif.cpp  simfs_dif.cpp  simfs_sft.cpp
src/components/mol/src/diffusion/: capi.cpp
src/components/mol/src/shift/: component.cpp
src/components/ph2/: CMakeLists.txt  emission_action.cpp  emission_action.hpp  excitation_action.cpp  excitation_action.hpp  ph2.cpp
src/components/ph2/include/actions/: emission_action.hpp  excitation_action.hpp  transfer_action.hpp
src/components/ph2/include/photophysics/: .component.hpp.swp  component.hpp
src/components/ph2/src/: component.cpp  emission_action.cpp  excitation_action.cpp  simfs_ph2.cpp  transfer_action.cpp
src/components/ph2/src/photophysics/: component.cpp
src/components/spl/: CMakeLists.txt  spl.cpp
src/components/spl/include/splitter/: component.hpp
src/components/spl/src/: component.cpp
src/components/utl/: CMakeLists.txt
src/components/utl/include/buffer/: component.hpp
src/components/utl/include/imager/: component.hpp
src/components/utl/include/mixer/: component.hpp
src/components/utl/include/splitter/: component.hpp
src/components/utl/include/t3r_writer/: component.hpp
src/components/utl/src/buffer/: component.cpp  simfs_buf.cpp
src/components/utl/src/imager/: component.cpp  simfs_img.cpp
src/components/utl/src/mixer/: component.cpp  simfs_mix.cpp
src/components/utl/src/splitter/: component.cpp  simfs_spl.cpp
src/lib/cmdutils/tests/: .options_test.cpp.swp  CMakeLists.txt  fixtures.hpp  io_test.cpp  json_cli_fixtures.hpp  json_cli_test.cpp  options_fixtures.hpp  options_test.cpp
src/lib/component/: CMakeLists.txt
src/lib/component/include/component/: cli.hpp  (+2 more)
src/lib/component/src/: component.cpp
src/lib/component/tests/: CMakeLists.txt  component_test.cpp  component_test_fixtures.hpp  component_test_mocks.hpp
src/lib/focus/: CMakeLists.txt
src/lib/focus/src/: alpha.cpp  efield.cpp  efield_interp.cpp  gauss.cpp  gaussian.cpp  storage.cpp
src/lib/focus/tests/: alpha_gauss_test.cpp  efield_test.cpp  fixtures.hpp  focus_test_fixture.hpp  gaussian_test.cpp  test_alphaGauss.cpp  test_gaussian.cpp
src/lib/graph/: .graph.hpp.swp  CMakeLists.txt  fluorophore.cpp  fluorophore.hpp
src/lib/graph/src/: action.cpp  edge.cpp  event.cpp  graph.cpp  node.cpp  output_timed_value_action.cpp  set_rates_action.cpp  set_state_if_action.cpp  terminate_action.cpp
src/lib/graph/test/: fixtures.hpp  test_graph.cpp
src/lib/graph/tests/: CMakeLists.txt  fixtures.hpp  graph_test.cpp  node_test.cpp
src/lib/grid/: CMakeLists.txt
src/lib/random/: CMakeLists.txt
src/lib/random/src/: random.cpp
src/lib/random/tests/: random_test.cpp
src/lib/shape/: CMakeLists.txt
src/lib/shape/include/: shape.hpp
src/lib/shellutils/tests/: .jcli_fixtures.hpp.swp  CMakeLists.txt  io_fixtures.hpp  io_test.cpp  jcli_fixtures.hpp  jcli_test.cpp
src/lib/utilities/: CMakeLists.txt
src/lib/utilities/include/: platform.hpp
src/lib/utilities/src/: baseIO.cpp  env.cpp  random.cpp
src/modules/single_dye/: CMakeLists.txt
src/modules/single_dye/src/: module.cpp  simfs_sdye.cpp  simfs_single_dye.cpp
tests/: CMakeLists.txt  cmdutils.py  controller.py  display.html  gcov.sh  kill_all.sh  parameters.json  simulate.sh  trace_view.py
tests/test_capi/: CMakeLists.txt  test_diff_capi.cpp
tests/test_component/: CMakeLists.txt  notes.md  test_buffer.cpp  test_component.cpp
tests/test_focus/: CMakeLists.txt  test_alpha.cpp  test_gauss.cpp  test_gbeam.cpp  utils.hpp
tests/test_graph/: CMakeLists.txt  test_graph.cpp
tests/test_grid/: CMakeLists.txt  test_grid.cpp
tests/test_img/: CMakeLists.txt  test_img.cpp
tests/test_mix/: CMakeLists.txt  test_mix.cpp
tests/test_shape/: CMakeLists.txt  test_XYGaussZExp.cpp  test_XYZGauss.cpp  test_factory.cpp  test_gaussBeam.cpp  utils.hpp
tests/test_utilities/: CMakeLists.txt  test_baseIO.cpp  test_env.cpp  test_random.cpp
(+230 files in other folders)
